--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ input[type="date"] {
   height: 30px;
   /* width: 100%; */
 }
+
+button[type="submit"] {
+  background-color: none;
+  padding: 0.5rem 1rem;
+}
