--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url(https://images.pexels.com/photos/699919/pexels-photo-699919.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-image: url(https://images.unsplash.com/photo-1632841528863-853b713a281c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +15,7 @@ body {
   min-height: 100vh;
 }
 .container {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 1rem;
   border-radius: 5px;
   color: white;
